*SAVARA-210, added the minizable event handler. *Using ClientBundle for the images handling.

--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 This is the SAVARA web console.
 
+
 === Build ==
 
 Run:
@@ -7,7 +8,7 @@ Run:
 mvn clean install
 
 
-=== Debug ===
+=== Debug/Run in hosted mode ===
 
 Go to the console folder, run:
 
@@ -16,3 +17,41 @@ mvn gwt:run
 
 
 PS: icons are found at here: http://findicons.com/pack/1581/silk
+
+
+
+How do I choose between onReveal() and onReset()?
+=================================================
+
+onReset is called whenever a new Presenter is requested,
+even if the current Presenter is visible. onReveal is called whenever the Presenter is revealed.
+
+
+In what order are the Presenter methods called?
+===============================================
+
+On First load:
+
+    Constructor
+    onBind
+    prepareFromRequest
+    revealInParent
+    onReveal
+    onReset
+    prepareRequest
+
+
+On Hiding:
+
+    onHide
+
+
+On Subsequent Reveals:
+
+    prepareFromRequest
+    revealInParent
+    onReveal
+    onReset
+    prepareRequest
+
+(Taken from http://code.google.com/p/gwt-platform/wiki/FrequentlyAskedQuestions)
